--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -113,7 +113,9 @@
     font-family: "Gilroy", sans-serif;
   }
 }
-
+.editor-content {
+  font-family: "Gilroy", sans-serif;
+}
 /* Base styles */
 .perspective-1000 {
   perspective: 1000px;
